--- a/static html/poll.html
+++ b/static html/poll.html
@@ -46,7 +46,7 @@
   <div class="span7 well">
 <form class="form-horizontal">
         <fieldset>
-          <legend>Controls Bootstrap supports</legend>
+          <legend>Preguntas</legend>
 
           <div class="control-group">
             <label class="control-label" for="select01">Cuáles cree usted que son las horas más productivas de su jornada laboral?</label>
